#887 fixes dropdown alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1062,11 +1062,6 @@ Disabled tag color (50% opacity): rgba(0,50,83, 0.5);*/
       }
     }
 
-/* Create see more button which when checked will set max height to auto*/
-/* Make See more say see less when checked */
-/* see more is set as content of label in css*/
-/* using after to set content to see less */
-
     .mission-statement {
       position: relative;
     }
@@ -2362,6 +2357,12 @@ Disabled tag color (50% opacity): rgba(0,50,83, 0.5);*/
       position: relative;
       width: 184px;
       display: inline-block;
+    }
+
+    @media (min-width: 600px) {
+      .dropdown-div {
+        width: 154px;
+      }
     }
         .dropdown {
           display: inline-block;
